[package]
name = "im-control"
version = "1.0.0"
edition = "2024"
description = "A CLI tool to control IME on Windows"
repository = "https://github.com/AzureZee/im-control"
license = "MIT"
keywords = ["cli", "ime", "input", "keyboard", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]
publish = ["crates-io"]

[[bin]]
name = "imc"
path = "src/main.rs"

[dependencies.windows-sys]
version = ">=0.59, <=0.61"
features = [
  "Win32_Foundation",
  "Win32_UI_Input_Ime",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  # "Win32_System_Threading",
  # "Win32_System_ProcessStatus",
  # "Win32_System_Diagnostics_Debug",
  # "Win32_Graphics_Dwm",
]

[profile.opt]
inherits = "release"
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1
